--- a/src/Style/Navbar.module.css
+++ b/src/Style/Navbar.module.css
@@ -1,8 +1,9 @@
 .container {
   background-color: black;
   height: 78px;
-  /* padding: 0px 5%; */
+  position: -webkit-sticky; 
   position: sticky;
+  top: 0;
   /* padding-top: 1%; */
 }
 
